--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -64,7 +64,7 @@ android {
     defaultConfig {
         applicationId('org.odk.collect.android')
         minSdkVersion(16)
-        targetSdkVersion(22)
+        targetSdkVersion(23)
         versionCode LEGACY_BUILD_NUMBER_OFFSET + getMasterCommitCount()
         versionName getVersionName()
         testInstrumentationRunner('android.support.test.runner.AndroidJUnitRunner')
@@ -175,12 +175,15 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.+'
     compile 'com.google.android.gms:play-services:10.0.1'
 
+    //landing page
+    compile 'com.github.apl-devs:appintro:v4.2.0'
+
     // Testing-only dependencies
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
     testCompile group: 'org.robolectric', name: 'robolectric', version: '3.1.2'
     testCompile group: 'org.robolectric', name: 'shadows-multidex', version: '3.0'
-    androidTestCompile group: 'com.android.support', name: 'support-annotations', version: '25.1.0'
+    androidTestCompile group: 'com.android.support', name: 'support-annotations', version: '25.3.1'
     androidTestCompile group: 'com.android.support.test', name: 'runner', version: '0.5'
     androidTestCompile group: 'com.android.support.test', name: 'rules', version: '0.5'
     androidTestCompile group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '3.2.0'
