--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -257,7 +257,6 @@ the specific language governing permissions and limitations under the License.
         <activity android:name=".activities.ListFormForDownload"/>
         <activity android:name=".augmentedreality.MainActivity"/>
             android:theme="@style/Theme.AppCompat.Light"/>
-        <activity android:name=".augmentedreality.formisian.BangunanSensusOnMaps"/>
         <activity
             android:name=".augmentedreality.scan.ARLandscapeActivity"
             android:label="Landscape-only AR"
@@ -281,8 +280,10 @@ the specific language governing permissions and limitations under the License.
         <activity android:name=".augmentedreality.formisian.SetLocationActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity android:name=".augmentedreality.landingpage.LandingPageActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity android:name=".augmentedreality.ui.MainMenuApp"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
 
         <activity android:name=".augmentedreality.jajal.JajalActivity"
